css/taf-metar-style.css
:root {
    --bg-c: #007399;
    /* --bgc: #000000; */
    /* --bgc: #800b00; */
    /* --bgc: #ff4433; */
    /* --bgc: #008000; */
}

body > main { background: var(--bg-c); }

main > nav, main > section > nav, #site-meta {
    background-color: var(--infobg-c);
    color: white;
    padding: 8px;
    border-bottom: 2px solid black;
}

.has-icon::before {
    content: "";
    background-size: 100% 100%;
    background-position: top left;
    background-repeat: no-repeat;
    padding-right: 16px;
    margin-right: 4px;
}

nav > input {
    text-transform: uppercase;
    font-family: "Sometype Mono", monospace;
    text-align: center;
    background-color: var(--txtbg-c);
    font-weight: bold;
}

nav > input, nav > select, nav > label { margin-left: 4px; margin-right: 4px; }
nav > label:last-of-type { margin-right: 8px; }
    


nav > button,
nav > select,
section > button { 
    font-family: inherit;
}

nav > button,
nav > select,
section > button {
    cursor: pointer;
}

nav > input,
nav > button,
nav > select,
section > button {
    border: var(--px1border);
    padding: 4px;
    border-radius: 4px;
}

nav > button,
section > button {
    background-color: var(--btninactive-c);
}

nav > button,
section > button {
    color: var(--txt-c);
    background-color: var(--btninactive-c);
}

#load-button,
button.selected,
nav > select {
    background: var(--btnbg-c);
    color: var(--txtinv-c);
}

main > nav > * { font-size: inherit; }

button::before {
    background-size: 80% 100%;
    background-repeat: no-repeat;
    padding-right: 12px;
}

button:not(.selected)::before,
#site-meta > *::before { filter: invert(); }
#site-meta > *:not(:first-child) { margin-right: 16px; }

#load-button::before,
button.selected::before { filter: none; }  

label[for="site-id"]::before { background-image:url("../images/icons/search.png"); }
#load-button::before {
    background-size: 80% 100%;
    background-repeat: no-repeat;
    background-image: url("../images/icons/load.png");
}

.decode-toggle { border-radius: 0; }
#raw.decode-toggle { border-radius: 4px 0 0 4px; border-right: none;}
#usa.decode-toggle { border-radius: 0 4px 4px 0; border-left: none;}

#raw.decode-toggle::before { background-image:url("../images/icons/plane.png"); }
#can.decode-toggle::before { background-image:url("../images/icons/can.png"); }
#usa.decode-toggle::before { background-image:url("../images/icons/usa.png"); }


#metar-output, #forecast-container { min-height: 240px; max-height: 70vh; overflow-y: scroll; }


section > p, section > div > p {
    white-space: pre-wrap;
    font-family: "Sometype Mono", monospace;
    margin: 0;
    padding: 0 8px;
}

.metar-string:nth-of-type(2n) {
    background: rgba(255,255,255,0.6);
    color: var(--txtinv-c);
}
.metar-string { padding: 4px 8px; background: rgba(255,255,255,0.3); }

.metar-sigwx:not(.aviation) {
    font-weight: bold;
    color: black;
    background: white;
    padding: 0 2px;
    border-radius: 4px;
}

:root.avn > body > section > p > .metar-sigwx.aviation {
    font-weight: bold;
    color: var(--txtinv-c);
    background: white;
    padding: 0 2px;
    border-radius: 4px;
}



#site-meta {
    border-top: 2px solid black;
    margin: 0;
    text-align: center;
    border-bottom: none;
}

#site-name { display: block; font-weight: 700; margin-bottom: 4px;}
#site-name::before { background-image:url("../images/icons/airport.png");  }
#lat-lon::before   { background-image:url("../images/icons/map.png"); }
#elevation::before { background-image:url("../images/icons/mountains.png"); }
#sun-times::before { background-image:url("../images/icons/sun.png"); }


#taf-notam { min-height: 120px; }

#taf-notam, #tafplus > p {
    color: var(--txtinv-c);
    background-color: var(--btnbg-c);
}

#taf-notam > button, #tafplus > button {
    width: 50%;
    border-radius: 0;
    border: none;
    border-top: var(--px1border);
    border-bottom: var(--px1border);
    font-size: 18px;
}

#tafplus > button { width: 25%; }

#taf-notam > button:first-of-type { border-right: var(--px1border); }
#taf-toggle::before { background-image:url("../images/icons/taf.png"); }
#notam-toggle::before { background-image:url("../images/icons/notam.png"); }

#taf-notam > p > span:not(.taf-main, .taf-meta) { display: block; }
#taf-notam > p .metar-sigwx {
    color: var(--txt-c);
    background: black;
}
#taf-notam > p {
    margin: 0;
    padding: 4px 8px;
    /* font-size: 20px; */
}

.taf-main { margin-left: 8px; }
.taf-meta { font-weight: bold; border-bottom: 1px dashed var(--txtinv-c); }
.taf-fm-group { text-indent: 16px ; }
.taf-part-period { text-indent: 32px ; }
.taf-rmk { text-indent: 16px ; }





/* #avn-toggle { border-radius: 4px 0 0 4px; border-right: none; }
#can-toggle { border-radius: 0; }
#usa-toggle { border-radius: 0 4px 4px 0; border-left: none; } */

